# Daikon

./: .gitignore  CMakeLists.txt  main.cpp
cmake/modules/: FindDaikon.cmake  FindEigen.cmake  FindMatplotlibCPP.cmake  FindUtils.cmake
src/daikon/: layer.hpp  leakyrelu.hpp  linear.hpp  loss.hpp  meansquarederror.hpp  neuralnetwork.hpp  normalizer.hpp  prelu.hpp  relu.hpp
src/eigen_utils/: eigenutils.hpp
src/utils/: logging.hpp
